# 3D-Gaussian-Splatting-Vulkan-Viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
gaussian_splatting/: CMakeLists.txt  main.cpp
gaussian_splatting/includes/: application.h  camera.h  gaussian.h  uniform.h  vertex.h
gaussian_splatting/src/: application.cpp  camera.cpp  gaussian.cpp
gaussian_splatting/vulkan/shaders/: compile.bat  shader.frag  shader.vert
gaussian_splatting/vulkan/shaders/complied/: frag.spv  vert.spv
tests/: CMakeLists.txt  test_load_ply.cpp  test_projection.cpp
vendors/: CMakeLists.txt
